fixed review img and style perfectly matched to content

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@ footer {
   background: #1a1a1a;
   color: #ddd;
   padding: 50px 8% 20px;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .footer-container {
