--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -70,7 +70,7 @@
   .features {
     /* flex-wrap: wrap; */
     gap: 20px;
-    padding: 40px 6%;
+    /* padding: 40px 6%; */
   }
 
   .feature {
@@ -82,7 +82,7 @@
   .features {
     flex-direction: column;
     align-items: center;
-    padding: 30px 5%;
+    /* padding: 60px 5%; */
     gap: 25px;
   }
 
